--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,6 @@ h1{
 header{
     height: 100px;
 }
-
 nav{
     width: 100%;
     background-color: #424558;
@@ -33,29 +32,26 @@ nav a{
     text-transform: uppercase;
     font-size: 15px;
 }
-
 .taille{
     font-size: 17px;
 }
-
 .table{
     display: table;
     margin: 0 auto;
 }
-
 .menu-index:hover, .presentation{
     border-top: 5px solid #0070BB;
     background-color: #EFF2FB
-
 }
 }
 .menu-exp:hover, .parcours{
     border-top: 5px solid #0070BB;
     background-color: #EFF2FB
 }
-
-
-
+.menu-index:hover, .experiences{
+    border-top: 5px solid #0070BB;
+    background-color: #EFF2FB
+}
 .menu-hob:hover, .competences{
     border-top: 5px solid #0070BB;
     background-color: #EFF2FB;
@@ -67,8 +63,6 @@ nav a{
 nav li:hover a{
     padding: 15px 30px 20px 30px;
 }
-
-
 section{
     width: 100%;
     min-height: 300px;
@@ -96,13 +90,11 @@ section{
     display: table;
     clear: both;
 }
-
 .orange{
     border-top: 5px solid #F5A9A9;
     background-color: #FBEFFB;
     margin-bottom: 0px;
 }
-
 .rose{
     border-top: 5px solid #F5A9A9;
     background-color: #FBEFFB;
@@ -139,33 +131,27 @@ section{
     background-color: #FBEFFB;
     margin-bottom: 0px;
 }
-
 .leftexp{
     width: 100%;
     float: left;
     margin-left: 5%;
 }
-
 .rightexp{
     width: 100%;
     float: left;
     margin-left: 55px;
     
 }
-
 .resto{
     margin-left: 55px;
       max-width: 330px;
 }
-
 .para{
     text-align: center;
 }
-
 .contact{
     text-align: center;
 }
-
 .linkedin :hover{
     border-top: 0.2px solid #4799F8;
     background-color: #EFF2FB
@@ -183,32 +169,24 @@ section{
 section {
   font-family: 'Century Gothic', Calibri, sans-serif;
 }
-
 section.about-me .sec,
 section.parcours .sec {
   border-top: 1px solid #747B85;
   padding-top: 20px; 
 }
-
-
 section.parcours,
 section.competences {
   border-top: 4px solid #359FD4;
   padding-top: 20px;
 }
-
 section.presentation {
   margin-bottom: 3px; 
 }
-
 section.parcours{
   margin-top: 0px; 
   border-top: 5px solid #359FD4;
   padding-top: 20px;
 }
-
-
-
 @media screen and (max-width: 780px){
     header{
         height: 50px ;
